# pda_abravo_proyecto

./: .gitignore  Dockerfile  Dockerfile   README.md  config.ini  docker-compose.yaml  input_cities.csv  main.py  pyproject.toml  tests.py  utils.py
.github/workflows/: ci.yml  lint.yml
config/: config.ini
dags/: main_dag.py
dags/apis_etl/: utils.py
dags/apis_etl/extractors/: population_api.py  weather_api.py
dags/apis_etl/loaders/: load_to_redshift.py
dags/apis_etl/transformers/: transform_functions.py
dags/database/: dim_population.py
dags/redshift/: tables_creation.py
etl/extractors/: cities.py  population_api.py  weather_api.py
etl/loaders/: load_to_redshift.py
etl/transformers/: transform_functions.py
scripts/apis_etl/: utils.py
scripts/apis_etl/extractors/: cities.py  population_api.py  weather_api.py
scripts/apis_etl/loaders/: load_to_redshift.py
scripts/apis_etl/transformers/: transform_functions.py
scripts/database/: db_initialization.py  dim_cities.py  dim_population.py  fact_weather_metrics.py
tests/: test_api_key.py  test_get_api_not_set.py  test_get_api_success.py  test_get_weather_data.py  test_load_citites_data_success.py  test_load_config.py
utils/: redshift_connection.py  utils.py
