[tool.poetry]
name = "pda-abravo-proyecto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "1.26.4"
pandas = "1.5.3"
configparser = "^7.1.0"
pyarrow = "^17.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "1.4.36"
redshift-connector = "^2.1.3"
apache-airflow = "2.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
